sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:26: error: not found: value numbase
  if (player2 == numbase) {
                 ^